website/versioned_docs/version-2.0.x/reference/subsystems/docformatter.mdx
---
title: docformatter
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Python docformatter tool (https://github.com/myint/docformatter).

Backend: <span className="color--primary">`pants.core`</span>

Config section: <span className="color--primary">`[docformatter]`</span>

<span className={styles.options}>

## Basic options

### `skip`

<Option
  cli_repr={`--[no-]docformatter-skip`}
  env_repr="PANTS_DOCFORMATTER_SKIP"
  default_repr={`False`}
>

Don&#x27;t use docformatter when running
`/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 fmt` and
`/home/josh/work/scie-pants/dist/scie-pants-linux-x86_64 lint`.

</Option>

### `args`

<Option
  cli_repr={`--docformatter-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_DOCFORMATTER_ARGS"
  default_repr={`[]`}
>

Arguments to pass directly to docformatter, e.g.
`--docformatter-args="--wrap-summaries=100 --pre-summary-newline"`.

</Option>

## Advanced options

### `version`

<Option
  cli_repr={`--docformatter-version=<str>`}
  env_repr="PANTS_DOCFORMATTER_VERSION"
  default_repr={`docformatter>=1.3.1,<1.4`}
>

Requirement string for the tool.

</Option>

### `extra_requirements`

<Option
  cli_repr={`--docformatter-extra-requirements="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DOCFORMATTER_EXTRA_REQUIREMENTS"
  default_repr={`[]`}
>

Any additional requirement strings to use with the tool. This is useful if the
tool allows you to install plugins or if you need to constrain a dependency to
a certain version.

</Option>

### `entry_point`

<Option
  cli_repr={`--docformatter-entry-point=<str>`}
  env_repr="PANTS_DOCFORMATTER_ENTRY_POINT"
  default_repr={`docformatter:main`}
>

The main module for the tool. Usually, you will not want to change this from
the default.

</Option>

### `interpreter_constraints`

<Option
  cli_repr={`--docformatter-interpreter-constraints="['<str>', '<str>', ...]"`}
  env_repr="PANTS_DOCFORMATTER_INTERPRETER_CONSTRAINTS"
  default_repr={`[\n  "CPython==2.7.*",\n  "CPython>=3.4,<3.9"\n]`}
>

Python interpreter constraints for this tool.

</Option>

## Deprecated options

None

</span>
